--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,57 +1,64 @@
-.login {
-    height: calc(100vh - 50px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background: url("https://ak.picdn.net/shutterstock/videos/1420588/thumb/1.jpg");
-    background-size: cover;
-    align-items: center;
+.container {
+    max-width: 1302px;
+    margin: 0 auto;
+    padding: 0 1.5em;
 }
 
-.loginTitle {
-    font-size: 50px;
+.content-section {
+    margin: 1em;
 }
 
-.loginForm {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
+.registraition-panel {
+    margin: auto;
+    display: block;
+    width: 500px;
+
 }
 
-.loginForm > label {
-    margin-top: 10px;
-    margin-bottom: 10px;
+
+
+
+/* Full-width input fields */
+input[type=text],
+input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    background: #f1f1f1;
+    border-radius: 25px;
+    border: 4px solid #75663e;
 }
 
-.loginInput {
-    padding: 10px;
-    background-color: white;
-    border: none;
+input[type=text]:focus,
+input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
 }
 
-.loginButton {
-    margin-top: 20px;
-    cursor: pointer;
-    background-color: orange;
-    border: none;
+/* Overwrite default styles of hr */
+hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+}
+
+/* Set a style for the submit/register button */
+.registerbtn {
+    background-color: #75663e;
     color: white;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.loginButton:disabled {
-    cursor: not-allowed;
-    background-color: burlywood;
-}
-
-.loginRegisterButton {
-    position: absolute;
-    top: 60px;
-    right: 20px;
-    background-color:burlywood;
+    padding: 16px 20px;
+    margin: 8px 0;
+    border-radius: 25px;
+    border: 4px solid #75663e;
     cursor: pointer;
-    border: none;
-    padding: 10px;
-    color: white;
-    border-radius: 10px;
+    width: 100%;
+    opacity: 0.9;
+}
+
+.registerbtn:hover {
+    opacity: 1;
+}
+/* Set a grey background color and center the text of the "sign in" section */
+.signin {
+    text-align: center;
 }
