--- a/src/components/appointment/appointment.css
+++ b/src/components/appointment/appointment.css
@@ -256,7 +256,18 @@ body {
     margin: 0;
 }
 
-
+.spesialists-sign-btn {
+    font-weight: bold;
+    font-size: 1.1em;
+    text-align: center;
+    color: #75663e;
+    border-radius: 25px;
+    border: 4px solid #75663e;
+    width: 280px;
+    padding-left: 23px;
+    padding-right: 23px;
+    height: 40px;
+}
 .filters {
     flex-wrap: wrap;
     justify-content: space-around;
@@ -309,6 +320,20 @@ body {
 
 }
 
+.spesialists-data-btn {
+    font-weight: bold;
+    font-size: 1.1em;
+    background: #b09b5f;
+    text-align: center;
+    color: #ffffff;
+    border-radius: 25px;
+    border: 4px solid #75663e;
+    width: 280px;
+    padding-left: 23px;
+    padding-right: 23px;
+
+    height: 40px;
+}
 .spesialist-title {
     display: block;
     text-align: left;
