--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,57 +1,121 @@
-.top {
-  width: 100%;
-  height: 50px;
-  background-color: white;
-  position: sticky;
-  top: 0;
-  display: flex;
-  align-items: center;
-  z-index: 999;
+.main-header {
+    background: #75663e;
+    border-radius: 25px;
+    margin-top: 10px;
+    padding: 10px;
 }
 
-.topLeft,
-.topRight {
-  flex: 3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.topCenter {
-  flex: 6;
-}
-
-.topList {
-    display: flex;
+.main-nav {
+    text-align: center;
+    font-size: 1.1em;
+    font-weight: lighter;
     align-items: center;
-    justify-content: center;
+
+}
+
+.main-nav li {
+    padding: 0 1%;
+}
+
+.nav a:hover {
+    background-color: rgba(255, 255, 255, .3);
+}
+
+.nav ul {
     margin: 0;
+}
+
+.nav li {
+    display: inline;
+}
+
+.nav a {
+    display: inline-block;
+    padding: 1.6em;
+    color: white;
+    text-decoration: none;
+}
+
+.dropbtn {
+    background-color: #3498db00;
+    color: white;
+    padding: 28px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover,
+.dropbtn:focus {
+    background-color: rgba(255, 255, 255, .3);
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+}
+
+.menu {
+    position: absolute;
+
+    list-style-type: none;
+    margin: 5px 0;
     padding: 0;
-    list-style: none;
+
+    border: 1px solid grey;
+    width: 150px;
 }
 
-.topListItem {
-    margin-right: 20px;
-    font-size: 18px;
-    font-weight: 300;
+.menu > li {
+    margin: 0;
+
+    background-color: white;
+}
+
+.menu > li:hover {
+    background-color: lightgray;
+}
+
+.menu > li > button {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 5px;
+    margin: 0;
+    font: inherit;
     cursor: pointer;
 }
 
-.topImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    transform: translate(-50%, -0);
+    left: 50%;
+    align-items: center;
+
+    background-color: #f1f1f1;
+    width: max-content;
+    min-width: 100%;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
-.topIcon {
-    font-size: 20px;
-    margin-right: 10px;
-    cursor: pointer;
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
-.topSearchIcon {
-    font-size: 18px;
-    cursor: pointer;
-    margin-left: 15px;
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
 }
