--- a/src/pages/favoriteSpecialists/favoriteSpecialists.css
+++ b/src/pages/favoriteSpecialists/favoriteSpecialists.css
@@ -13,7 +13,31 @@ body {
 .nav ul {
     margin: 0;
 }
+.spesialists-data-btn {
+    font-weight: bold;
+    font-size: 1.1em;
+    background: #b09b5f;
+    text-align: center;
+    color: #ffffff;
+    border-radius: 25px;
+    border: 4px solid #75663e;
+    width: 280px;
+    padding-left: 23px;
+    padding-right: 23px;
 
+    height: 40px;
+}
+
+.spesialist {
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 220px;
+    border-radius: 25px;
+    border: 4px solid #75663e;
+
+}
 .nav li {
     display: inline;
 }
