--- a/src/components/specialist/specialist.css
+++ b/src/components/specialist/specialist.css
@@ -378,7 +378,7 @@ body {
     font-size: 1.45em;
     width: 100%;
     height: 40px;
-    margin: 1px;
+    margin: 0;
     text-align: center;
 }
 
