--- a/src/components/specialistsList/specialistsList.css
+++ b/src/components/specialistsList/specialistsList.css
@@ -391,7 +391,7 @@ a:active {
     font-size: 1.45em;
     width: 100%;
     height: 40px;
-    margin: 1px;
+    margin: 0;
     text-align: center;
 }
 
